Автоматизация svg, правки

--- a/source/form.html
+++ b/source/form.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи</title>
     <meta name="viewport" content="width=device-width, initiale-scale=1">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/style.min.css">
     <link rel="icon" href="favicon.ico">
     <link rel="apple-touch-icon" href="/img/favicon/152.png">
     <link rel="manifest" href="manifest.webmanifest">
@@ -181,7 +181,7 @@
       <div class="main-footer__bottom bottom">
         <a class="bottom__link" href="#">
           <svg class="bottom__link-img" width="143" height="24" role="img" aria-label="Логотип Cat Energy">
-            <use href="/img/sprite.svg#logo-text"></use>
+            <use href="/img/sprite.svg#logo_logo-text"></use>
           </svg>
         </a>
 
@@ -203,7 +203,7 @@
         <div class="bottom__copyright copyright">
           <a class="copyright__link" href="#" aria-label="Сайт разработчика">HTML Academy
             <svg class="copyright__link-img" width="27" height="34" role="img">
-              <use href="/img/sprite.svg#logo-html"></use>
+              <use href="/img/sprite.svg#logo_logo-html"></use>
             </svg>
           </a>
         </div>
