--- a/source/index.html
+++ b/source/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи</title>
     <meta name="viewport" content="width=device-width, initiale-scale=1">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/style.min.css">
     <link rel="icon" href="favicon.ico">
     <link rel="apple-touch-icon" href="/img/favicon/152.png">
     <link rel="manifest" href="manifest.webmanifest">
@@ -53,6 +53,10 @@
 
         <div class="promo__wrapper">
           <picture>
+            <source type="image/webp" media="(min-width: 1440px)" srcset="/img/index/promo-desktop.webp 1x, /img/index/promo-desktop@2x.webp 2x">
+            <source type="image/webp" media="(min-width: 769px)" srcset="/img/index/promo-tablet.webp 1x, /img/index/promo-tablet@2x.webp 2x">
+            <source type="image/webp" srcset="/img/index/promo-mobile.webp 1x, /img/index/promo-mobile@2x.webp 2x">
+
             <source media="(min-width: 1440px)" srcset="/img/index/promo-desktop.png 1x, /img/index/promo-desktop@2x.png 2x">
             <source media="(min-width: 769px)" srcset="/img/index/promo-tablet.png 1x, /img/index/promo-tablet@2x.png 2x">
             <img class="promo__image" src="/img/index/promo-mobile.png" srcset="/img/index/promo-mobile@2x.png 2x" alt="Баночка Cat Energy Курица" width="280" height="270">
@@ -129,6 +133,9 @@
 
           <div class="cat__before">
             <picture>
+              <source type="image/webp" media="(min-width: 769px)" srcset="/img/index/cat-fat-tablet.webp 1x, /img/index/cat-fat-tablet@2x.webp 2x" width="560" height="512">
+              <source type="image/webp" srcset="/img/index/cat-fat-mobile.webp 1x, /img/index/cat-fat-mobile@2x.webp 2x" width="560" height="512">
+
               <source media="(min-width: 769px)" srcset="/img/index/cat-fat-tablet.png 1x, /img/index/cat-fat-tablet@2x.png 2x" width="560" height="512">
               <img class="cat__before-img" src="/img/index/cat-fat-mobile.png" srcset="/img/index/cat-fat-mobile@2x.png 2x" alt="Полный кот Борис до" width="280" height="256">
             </picture>
@@ -142,6 +149,9 @@
 
           <div class="cat__after">
             <picture>
+              <source type="image/webp" media="(min-width: 769px)" srcset="/img/index/cat-skinny-tablet.webp 1x, /img/index/cat-skinny-tablet@2x.webp 2x" width="560" height="512">
+              <source type="image/webp" srcset="/img/index/cat-skinny-mobile.webp 1x, /img/index/cat-skinny-mobile@2x.webp 2x" width="560" height="512">
+
               <source media="(min-width: 769px)" srcset="/img/index/cat-skinny-tablet.png 1x, /img/index/cat-skinny-tablet@2x.png 2x" width="560" height="512">
               <img class="cat__after-img" src="/img/index/cat-skinny-mobile.png" srcset="/img/index/cat-skinny-mobile@2x.png 2x" alt="Худой кот Борис после" width="280" height="256">
             </picture>
@@ -159,7 +169,7 @@
 
           <div class="adress__wrapper">
             <p class="adress__text">ул. Большая Конюшенная, д. 19/8</p>
-            <p class="adress__text adress__city">Санкт-Петербург</p>
+            <p class="adress__text adress__city">Санкт-Петербург 555</p>
           </div>
         </div>
 
@@ -171,7 +181,7 @@
       <div class="main-footer__bottom bottom">
         <a class="bottom__link" href="#">
           <svg class="bottom__link-img" width="143" height="24" role="img" aria-label="Логотип Cat Energy">
-            <use href="/img/sprite.svg#logo-text"></use>
+            <use href="/img/sprite.svg#logo_logo-text"></use>
           </svg>
         </a>
 
@@ -193,7 +203,7 @@
         <div class="bottom__copyright copyright">
           <a class="copyright__link" href="#" aria-label="Сайт разработчика">HTML Academy
             <svg class="copyright__link-img" width="27" height="34" role="img">
-              <use href="/img/sprite.svg#logo-html"></use>
+              <use href="/img/sprite.svg#logo_logo-html"></use>
             </svg>
           </a>
         </div>
