--- a/source/catalog.html
+++ b/source/catalog.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи</title>
     <meta name="viewport" content="width=device-width, initiale-scale=1">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/style.min.css">
     <link rel="icon" href="favicon.ico">
     <link rel="apple-touch-icon" href="/img/favicon/152.png">
     <link rel="manifest" href="manifest.webmanifest">
@@ -54,6 +54,10 @@
 
             <div class="products__img-wrapper">
               <picture>
+                <source type="image/webp" media="(min-width: 1440px)" srcset="/img/products/ce-pro-chicken-500g-desktop.webp 1x, /img/products/ce-pro-chicken-500g-desktop@2x.webp 2x" width="161" height="172">
+                <source type="image/webp" media="(min-width: 769px)" srcset="/img/products/ce-pro-chicken-500g-tablet.webp 1x, /img/products/ce-pro-chicken-500g-tablet@2x.webp 2x" width="161" height="172">
+                <source type="image/webp" srcset="/img/products/ce-pro-chicken-500g-mobile.webp 1x, /img/products/ce-pro-chicken-500g-mobile@2x.webp 2x" width="161" height="172">
+
                 <source media="(min-width: 1440px)" srcset="/img/products/ce-pro-chicken-500g-desktop.png 1x, /img/products/ce-pro-chicken-500g-desktop@2x.png 2x" width="161" height="172">
                 <source media="(min-width: 769px)" srcset="/img/products/ce-pro-chicken-500g-tablet.png 1x, /img/products/ce-pro-chicken-500g-tablet@2x.png 2x" width="161" height="172">
                 <img class="products__img" src="/img/products/ce-pro-chicken-500g-mobile.png" srcset="/img/products/ce-pro-chicken-500g-mobile@2x.png 2x" alt="Cat Energy PRO 500г с курицей" width="68" height="86">
@@ -84,6 +88,10 @@
 
             <div class="products__img-wrapper">
               <picture>
+                <source type="image/webp" media="(min-width: 1440px)" srcset="/img/products/ce-pro-chicken-1000g-desktop.webp 1x, /img/products/ce-pro-chicken-1000g-desktop@2x.webp 2x" width="168" height="206">
+                <source type="image/webp" media="(min-width: 769px)" srcset="/img/products/ce-pro-chicken-1000g-tablet.webp 1x, /img/products/ce-pro-chicken-1000g-tablet@2x.webp 2x" width="168" height="206">
+                <source type="image/webp" srcset="/img/products/ce-pro-chicken-1000g-mobile.webp 1x, /img/products/ce-pro-chicken-1000g-mobile@2x.webp 2x" width="168" height="206">
+
                 <source media="(min-width: 1440px)" srcset="/img/products/ce-pro-chicken-1000g-desktop.png 1x, /img/products/ce-pro-chicken-1000g-desktop@2x.png 2x" width="172" height="196">
                 <source media="(min-width: 769px)" srcset="/img/products/ce-pro-chicken-1000g-tablet.png 1x, /img/products/ce-pro-chicken-1000g-tablet@2x.png 2x" width="168" height="206">
                 <img class="products__img" src="/img/products/ce-pro-chicken-1000g-mobile.png" srcset="/img/products/ce-pro-chicken-1000g-mobile@2x.png 2x" alt="Cat Energy PRO 1000г с курицей" width="84" height="100">
@@ -114,6 +122,10 @@
 
             <div class="products__img-wrapper">
               <picture>
+                <source type="image/webp" media="(min-width: 1440px)" srcset="/img/products/ce-pro-fish-500g-desktop.webp 1x, /img/products/ce-pro-fish-500g-desktop@2x.webp 2x" width="163" height="174">
+                <source type="image/webp" media="(min-width: 769px)" srcset="/img/products/ce-pro-fish-500g-tablet.webp 1x, /img/products/ce-pro-fish-500g-tablet@2x.webp 2x" width="163" height="174">
+                <source type="image/webp" srcset="/img/products/ce-pro-fish-500g-mobile.webp 1x, /img/products/ce-pro-fish-500g-mobile@2x.webp 2x" width="163" height="174">
+
                 <source media="(min-width: 1440px)" srcset="/img/products/ce-pro-fish-500g-desktop.png 1x, /img/products/ce-pro-fish-500g-desktop@2x.png 2x" width="163" height="174">
                 <source media="(min-width: 769px)" srcset="/img/products/ce-pro-fish-500g-tablet.png 1x, /img/products/ce-pro-fish-500g-tablet@2x.png 2x" width="163" height="174">
                 <img class="products__img" src="/img/products/ce-pro-fish-500g-mobile.png" srcset="/img/products/ce-pro-fish-500g-mobile@2x.png 2x" alt="Cat Energy PRO 500г с рыбой" width="68" height="78">
@@ -144,6 +156,10 @@
 
             <div class="products__img-wrapper">
               <picture>
+                <source type="image/webp" media="(min-width: 1440px)" srcset="/img/products/ce-pro-fish-1000g-desktop.webp 1x, /img/products/ce-pro-fish-1000g-desktop@2x.webp 2x" width="168" height="200">
+                <source type="image/webp" media="(min-width: 769px)" srcset="/img/products/ce-pro-fish-1000g-tablet.webp 1x, /img/products/ce-pro-fish-1000g-tablet@2x.webp 2x" width="168" height="200">
+                <source type="image/webp" srcset="/img/products/ce-pro-fish-1000g-mobile.webp 1x, /img/products/ce-pro-fish-1000g-mobile@2x.webp 2x" width="168" height="200">
+
                 <source media="(min-width: 1440px)" srcset="/img/products/ce-pro-fish-1000g-desktop.png 1x, /img/products/ce-pro-fish-1000g-desktop@2x.png 2x" width="172" height="196">
                 <source media="(min-width: 769px)" srcset="/img/products/ce-pro-fish-1000g-tablet.png 1x, /img/products/ce-pro-fish-1000g-tablet@2x.png 2x" width="168" height="200">
                 <img class="products__img" src="/img/products/ce-pro-fish-1000g-mobile.png" srcset="/img/products/ce-pro-fish-1000g-mobile@2x.png 2x" alt="Cat Energy PRO 1000г с рыбой" width="84" height="100">
@@ -174,6 +190,10 @@
 
             <div class="products__img-wrapper">
               <picture>
+                <source type="image/webp" media="(min-width: 1440px)" srcset="/img/products/ce-slim-buckwheat-500g-desktop.webp 1x, /img/products/ce-slim-buckwheat-500g-desktop@2x.webp 2x" width="161" height="171">
+                <source type="image/webp" media="(min-width: 769px)" srcset="/img/products/ce-slim-buckwheat-500g-tablet.webp 1x, /img/products/ce-slim-buckwheat-500g-tablet@2x.webp 2x" width="161" height="171">
+                <source type="image/webp" srcset="/img/products/ce-slim-buckwheat-500g-mobile.webp 1x, /img/products/ce-slim-buckwheat-500g-mobile@2x.webp 2x" width="161" height="171">
+
                 <source media="(min-width: 1440px)" srcset="/img/products/ce-slim-buckwheat-500g-desktop.png 1x, /img/products/ce-slim-buckwheat-500g-desktop@2x.png 2x" width="161" height="171">
                 <source media="(min-width: 769px)" srcset="/img/products/ce-slim-buckwheat-500g-tablet.png 1x, /img/products/ce-slim-buckwheat-500g-tablet@2x.png 2x" width="161" height="171">
                 <img class="products__img" src="/img/products/ce-slim-buckwheat-500g-mobile.png" srcset="/img/products/ce-slim-buckwheat-500g-mobile@2x.png 2x" alt="Cat Energy slim 500г с гречкой" width="68" height="78">
@@ -204,6 +224,10 @@
 
             <div class="products__img-wrapper">
               <picture>
+                <source type="image/webp" media="(min-width: 1440px)" srcset="/img/products/ce-slim-buckwheat-1000g-desktop.webp 1x, /img/products/ce-slim-buckwheat-1000g-desktop@2x.webp 2x" width="168" height="200">
+                <source type="image/webp" media="(min-width: 769px)" srcset="/img/products/ce-slim-buckwheat-1000g-tablet.webp 1x, /img/products/ce-slim-buckwheat-1000g-tablet@2x.webp 2x" width="168" height="200">
+                <source type="image/webp" srcset="/img/products/ce-slim-buckwheat-1000g-mobile.webp 1x, /img/products/ce-slim-buckwheat-1000g-mobile@2x.webp 2x" width="168" height="200">
+
                 <source media="(min-width: 1440px)" srcset="/img/products/ce-slim-buckwheat-1000g-desktop.png 1x, /img/products/ce-slim-buckwheat-1000g-desktop@2x.png 2x" width="172" height="196">
                 <source media="(min-width: 769px)" srcset="/img/products/ce-slim-buckwheat-1000g-tablet.png 1x, /img/products/ce-slim-buckwheat-1000g-tablet@2x.png 2x" width="168" height="200">
                 <img class="products__img" src="/img/products/ce-slim-buckwheat-1000g-mobile.png" srcset="/img/products/ce-slim-buckwheat-1000g-mobile@2x.png 2x" alt="Cat Energy slim 1000г с гречкой" width="84" height="100">
@@ -234,6 +258,10 @@
 
             <div class="products__img-wrapper">
               <picture>
+                <source type="image/webp" media="(min-width: 1440px)" srcset="/img/products/ce-slim-rice-500g-desktop.webp 1x, /img/products/ce-slim-rice-500g-desktop@2x.webp 2x" width="163" height="174">
+                <source type="image/webp" media="(min-width: 769px)" srcset="/img/products/ce-slim-rice-500g-tablet.webp 1x, /img/products/ce-slim-rice-500g-tablet@2x.webp 2x" width="163" height="174">
+                <source type="image/webp" srcset="/img/products/ce-slim-rice-500g-mobile.webp 1x, /img/products/ce-slim-rice-500g-mobile@2x.webp 2x" width="163" height="174">
+
                 <source media="(min-width: 1440px)" srcset="/img/products/ce-slim-rice-500g-desktop.png 1x, /img/products/ce-slim-rice-500g-desktop@2x.png 2x" width="163" height="174">
                 <source media="(min-width: 769px)" srcset="/img/products/ce-slim-rice-500g-tablet.png 1x, /img/products/ce-slim-rice-500g-tablet@2x.png 2x" width="163" height="174">
                 <img class="products__img" src="/img/products/ce-slim-rice-500g-mobile.png" srcset="/img/products/ce-slim-rice-500g-mobile@2x.png 2x" alt="Cat Energy slim 500г c рисом" width="72" height="84">
@@ -332,7 +360,7 @@
       <div class="main-footer__bottom bottom">
         <a class="bottom__link" href="#">
           <svg class="bottom__link-img" width="143" height="24" role="img" aria-label="Логотип Cat Energy">
-            <use href="/img/sprite.svg#logo-text"></use>
+            <use href="/img/sprite.svg#logo_logo-text"></use>
           </svg>
         </a>
 
@@ -354,7 +382,7 @@
         <div class="bottom__copyright copyright">
           <a class="copyright__link" href="#" aria-label="Сайт разработчика">HTML Academy
             <svg class="copyright__link-img" width="27" height="34" role="img">
-              <use href="/img/sprite.svg#logo-html"></use>
+              <use href="/img/sprite.svg#logo_logo-html"></use>
             </svg>
           </a>
         </div>
