Подключение preload файлов

--- a/source/index.html
+++ b/source/index.html
@@ -8,6 +8,13 @@
     <link rel="icon" href="favicon.ico">
     <link rel="apple-touch-icon" href="/img/favicon/152.png">
     <link rel="manifest" href="manifest.webmanifest">
+    <link rel="preload" href="/fonts/lato/Lato-Regular.woff" type="font/woff" as="font" crossorigin="anonymous">
+    <link rel="preload" href="/fonts/lato/Lato-Regular.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="/fonts/oswald/oswaldmedium.woff" type="font/woff" as="font" crossorigin="anonymous">
+    <link rel="preload" href="/fonts/oswald/oswaldmedium.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="/fonts/oswald/oswaldregular.woff" type="font/woff" as="font" crossorigin="anonymous">
+    <link rel="preload" href="/fonts/oswald/oswaldregular.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+
   </head>
 
   <body class="page__body page__body-index">
