--- a/source/form.html
+++ b/source/form.html
@@ -29,7 +29,7 @@
 
       <a class="main-header__logo-link-text" href="#">
         <svg class="main-header__text-logo" width="102" height="19" role="img" aria-label="Логотип Cat Energy">
-          <use href="/img/sprite.svg#logo-text"></use>
+          <use href="/img/sprite.svg#logo_logo-text"></use>
         </svg>
       </a>
 
