--- a/source/catalog.html
+++ b/source/catalog.html
@@ -29,7 +29,7 @@
 
       <a class="main-header__logo-link-text" href="#">
         <svg class="main-header__text-logo" width="102" height="19" role="img" aria-label="Логотип Cat Energy">
-          <use href="/img/sprite.svg#logo-text"></use>
+          <use href="/img/sprite.svg#logo_logo-text"></use>
         </svg>
       </a>
 
@@ -62,7 +62,7 @@
               <picture>
                 <source type="image/webp" media="(min-width: 1440px)" srcset="/img/products/ce-pro-chicken-500g-desktop.webp 1x, /img/products/ce-pro-chicken-500g-desktop@2x.webp 2x" width="161" height="172">
                 <source type="image/webp" media="(min-width: 769px)" srcset="/img/products/ce-pro-chicken-500g-tablet.webp 1x, /img/products/ce-pro-chicken-500g-tablet@2x.webp 2x" width="161" height="172">
-                <source type="image/webp" srcset="/img/products/ce-pro-chicken-500g-mobile.webp 1x, /img/products/ce-pro-chicken-500g-mobile@2x.webp 2x" width="161" height="172">
+                <source type="image/webp" srcset="/img/products/ce-pro-chicken-500g-mobile.webp 1x, /img/products/ce-pro-chicken-500g-mobile@2x.webp 2x" width="68" height="86">
 
                 <source media="(min-width: 1440px)" srcset="/img/products/ce-pro-chicken-500g-desktop.png 1x, /img/products/ce-pro-chicken-500g-desktop@2x.png 2x" width="161" height="172">
                 <source media="(min-width: 769px)" srcset="/img/products/ce-pro-chicken-500g-tablet.png 1x, /img/products/ce-pro-chicken-500g-tablet@2x.png 2x" width="161" height="172">
@@ -94,9 +94,9 @@
 
             <div class="products__img-wrapper">
               <picture>
-                <source type="image/webp" media="(min-width: 1440px)" srcset="/img/products/ce-pro-chicken-1000g-desktop.webp 1x, /img/products/ce-pro-chicken-1000g-desktop@2x.webp 2x" width="168" height="206">
+                <source type="image/webp" media="(min-width: 1440px)" srcset="/img/products/ce-pro-chicken-1000g-desktop.webp 1x, /img/products/ce-pro-chicken-1000g-desktop@2x.webp 2x" width="172" height="196">
                 <source type="image/webp" media="(min-width: 769px)" srcset="/img/products/ce-pro-chicken-1000g-tablet.webp 1x, /img/products/ce-pro-chicken-1000g-tablet@2x.webp 2x" width="168" height="206">
-                <source type="image/webp" srcset="/img/products/ce-pro-chicken-1000g-mobile.webp 1x, /img/products/ce-pro-chicken-1000g-mobile@2x.webp 2x" width="168" height="206">
+                <source type="image/webp" srcset="/img/products/ce-pro-chicken-1000g-mobile.webp 1x, /img/products/ce-pro-chicken-1000g-mobile@2x.webp 2x" width="84" height="100">
 
                 <source media="(min-width: 1440px)" srcset="/img/products/ce-pro-chicken-1000g-desktop.png 1x, /img/products/ce-pro-chicken-1000g-desktop@2x.png 2x" width="172" height="196">
                 <source media="(min-width: 769px)" srcset="/img/products/ce-pro-chicken-1000g-tablet.png 1x, /img/products/ce-pro-chicken-1000g-tablet@2x.png 2x" width="168" height="206">
@@ -130,7 +130,7 @@
               <picture>
                 <source type="image/webp" media="(min-width: 1440px)" srcset="/img/products/ce-pro-fish-500g-desktop.webp 1x, /img/products/ce-pro-fish-500g-desktop@2x.webp 2x" width="163" height="174">
                 <source type="image/webp" media="(min-width: 769px)" srcset="/img/products/ce-pro-fish-500g-tablet.webp 1x, /img/products/ce-pro-fish-500g-tablet@2x.webp 2x" width="163" height="174">
-                <source type="image/webp" srcset="/img/products/ce-pro-fish-500g-mobile.webp 1x, /img/products/ce-pro-fish-500g-mobile@2x.webp 2x" width="163" height="174">
+                <source type="image/webp" srcset="/img/products/ce-pro-fish-500g-mobile.webp 1x, /img/products/ce-pro-fish-500g-mobile@2x.webp 2x" width="68" height="78">
 
                 <source media="(min-width: 1440px)" srcset="/img/products/ce-pro-fish-500g-desktop.png 1x, /img/products/ce-pro-fish-500g-desktop@2x.png 2x" width="163" height="174">
                 <source media="(min-width: 769px)" srcset="/img/products/ce-pro-fish-500g-tablet.png 1x, /img/products/ce-pro-fish-500g-tablet@2x.png 2x" width="163" height="174">
@@ -162,9 +162,9 @@
 
             <div class="products__img-wrapper">
               <picture>
-                <source type="image/webp" media="(min-width: 1440px)" srcset="/img/products/ce-pro-fish-1000g-desktop.webp 1x, /img/products/ce-pro-fish-1000g-desktop@2x.webp 2x" width="168" height="200">
+                <source type="image/webp" media="(min-width: 1440px)" srcset="/img/products/ce-pro-fish-1000g-desktop.webp 1x, /img/products/ce-pro-fish-1000g-desktop@2x.webp 2x" width="172" height="196">
                 <source type="image/webp" media="(min-width: 769px)" srcset="/img/products/ce-pro-fish-1000g-tablet.webp 1x, /img/products/ce-pro-fish-1000g-tablet@2x.webp 2x" width="168" height="200">
-                <source type="image/webp" srcset="/img/products/ce-pro-fish-1000g-mobile.webp 1x, /img/products/ce-pro-fish-1000g-mobile@2x.webp 2x" width="168" height="200">
+                <source type="image/webp" srcset="/img/products/ce-pro-fish-1000g-mobile.webp 1x, /img/products/ce-pro-fish-1000g-mobile@2x.webp 2x" width="84" height="100">
 
                 <source media="(min-width: 1440px)" srcset="/img/products/ce-pro-fish-1000g-desktop.png 1x, /img/products/ce-pro-fish-1000g-desktop@2x.png 2x" width="172" height="196">
                 <source media="(min-width: 769px)" srcset="/img/products/ce-pro-fish-1000g-tablet.png 1x, /img/products/ce-pro-fish-1000g-tablet@2x.png 2x" width="168" height="200">
@@ -196,13 +196,13 @@
 
             <div class="products__img-wrapper">
               <picture>
-                <source type="image/webp" media="(min-width: 1440px)" srcset="/img/products/ce-slim-buckwheat-500g-desktop.webp 1x, /img/products/ce-slim-buckwheat-500g-desktop@2x.webp 2x" width="161" height="171">
-                <source type="image/webp" media="(min-width: 769px)" srcset="/img/products/ce-slim-buckwheat-500g-tablet.webp 1x, /img/products/ce-slim-buckwheat-500g-tablet@2x.webp 2x" width="161" height="171">
-                <source type="image/webp" srcset="/img/products/ce-slim-buckwheat-500g-mobile.webp 1x, /img/products/ce-slim-buckwheat-500g-mobile@2x.webp 2x" width="161" height="171">
+                <source loading="lazy" type="image/webp" media="(min-width: 1440px)" srcset="/img/products/ce-slim-buckwheat-500g-desktop.webp 1x, /img/products/ce-slim-buckwheat-500g-desktop@2x.webp 2x" width="161" height="171">
+                <source loading="lazy" type="image/webp" media="(min-width: 769px)" srcset="/img/products/ce-slim-buckwheat-500g-tablet.webp 1x, /img/products/ce-slim-buckwheat-500g-tablet@2x.webp 2x" width="161" height="171">
+                <source loading="lazy" type="image/webp" srcset="/img/products/ce-slim-buckwheat-500g-mobile.webp 1x, /img/products/ce-slim-buckwheat-500g-mobile@2x.webp 2x" width="68" height="78">
 
-                <source media="(min-width: 1440px)" srcset="/img/products/ce-slim-buckwheat-500g-desktop.png 1x, /img/products/ce-slim-buckwheat-500g-desktop@2x.png 2x" width="161" height="171">
-                <source media="(min-width: 769px)" srcset="/img/products/ce-slim-buckwheat-500g-tablet.png 1x, /img/products/ce-slim-buckwheat-500g-tablet@2x.png 2x" width="161" height="171">
-                <img class="products__img" src="/img/products/ce-slim-buckwheat-500g-mobile.png" srcset="/img/products/ce-slim-buckwheat-500g-mobile@2x.png 2x" alt="Cat Energy slim 500г с гречкой" width="68" height="78">
+                <source loading="lazy" media="(min-width: 1440px)" srcset="/img/products/ce-slim-buckwheat-500g-desktop.png 1x, /img/products/ce-slim-buckwheat-500g-desktop@2x.png 2x" width="161" height="171">
+                <source loading="lazy" media="(min-width: 769px)" srcset="/img/products/ce-slim-buckwheat-500g-tablet.png 1x, /img/products/ce-slim-buckwheat-500g-tablet@2x.png 2x" width="161" height="171">
+                <img class="products__img" loading="lazy" src="/img/products/ce-slim-buckwheat-500g-mobile.png" srcset="/img/products/ce-slim-buckwheat-500g-mobile@2x.png 2x" alt="Cat Energy slim 500г с гречкой" width="68" height="78">
               </picture>
             </div>
 
@@ -230,13 +230,13 @@
 
             <div class="products__img-wrapper">
               <picture>
-                <source type="image/webp" media="(min-width: 1440px)" srcset="/img/products/ce-slim-buckwheat-1000g-desktop.webp 1x, /img/products/ce-slim-buckwheat-1000g-desktop@2x.webp 2x" width="168" height="200">
-                <source type="image/webp" media="(min-width: 769px)" srcset="/img/products/ce-slim-buckwheat-1000g-tablet.webp 1x, /img/products/ce-slim-buckwheat-1000g-tablet@2x.webp 2x" width="168" height="200">
-                <source type="image/webp" srcset="/img/products/ce-slim-buckwheat-1000g-mobile.webp 1x, /img/products/ce-slim-buckwheat-1000g-mobile@2x.webp 2x" width="168" height="200">
+                <source loading="lazy" type="image/webp" media="(min-width: 1440px)" srcset="/img/products/ce-slim-buckwheat-1000g-desktop.webp 1x, /img/products/ce-slim-buckwheat-1000g-desktop@2x.webp 2x" width="172" height="196">
+                <source loading="lazy" type="image/webp" media="(min-width: 769px)" srcset="/img/products/ce-slim-buckwheat-1000g-tablet.webp 1x, /img/products/ce-slim-buckwheat-1000g-tablet@2x.webp 2x" width="168" height="200">
+                <source loading="lazy" type="image/webp" srcset="/img/products/ce-slim-buckwheat-1000g-mobile.webp 1x, /img/products/ce-slim-buckwheat-1000g-mobile@2x.webp 2x" width="84" height="100">
 
-                <source media="(min-width: 1440px)" srcset="/img/products/ce-slim-buckwheat-1000g-desktop.png 1x, /img/products/ce-slim-buckwheat-1000g-desktop@2x.png 2x" width="172" height="196">
-                <source media="(min-width: 769px)" srcset="/img/products/ce-slim-buckwheat-1000g-tablet.png 1x, /img/products/ce-slim-buckwheat-1000g-tablet@2x.png 2x" width="168" height="200">
-                <img class="products__img" src="/img/products/ce-slim-buckwheat-1000g-mobile.png" srcset="/img/products/ce-slim-buckwheat-1000g-mobile@2x.png 2x" alt="Cat Energy slim 1000г с гречкой" width="84" height="100">
+                <source loading="lazy" media="(min-width: 1440px)" srcset="/img/products/ce-slim-buckwheat-1000g-desktop.png 1x, /img/products/ce-slim-buckwheat-1000g-desktop@2x.png 2x" width="172" height="196">
+                <source loading="lazy" media="(min-width: 769px)" srcset="/img/products/ce-slim-buckwheat-1000g-tablet.png 1x, /img/products/ce-slim-buckwheat-1000g-tablet@2x.png 2x" width="168" height="200">
+                <img class="products__img" loading="lazy" src="/img/products/ce-slim-buckwheat-1000g-mobile.png" srcset="/img/products/ce-slim-buckwheat-1000g-mobile@2x.png 2x" alt="Cat Energy slim 1000г с гречкой" width="84" height="100">
               </picture>
             </div>
 
@@ -264,13 +264,13 @@
 
             <div class="products__img-wrapper">
               <picture>
-                <source type="image/webp" media="(min-width: 1440px)" srcset="/img/products/ce-slim-rice-500g-desktop.webp 1x, /img/products/ce-slim-rice-500g-desktop@2x.webp 2x" width="163" height="174">
-                <source type="image/webp" media="(min-width: 769px)" srcset="/img/products/ce-slim-rice-500g-tablet.webp 1x, /img/products/ce-slim-rice-500g-tablet@2x.webp 2x" width="163" height="174">
-                <source type="image/webp" srcset="/img/products/ce-slim-rice-500g-mobile.webp 1x, /img/products/ce-slim-rice-500g-mobile@2x.webp 2x" width="163" height="174">
+                <source loading="lazy" type="image/webp" media="(min-width: 1440px)" srcset="/img/products/ce-slim-rice-500g-desktop.webp 1x, /img/products/ce-slim-rice-500g-desktop@2x.webp 2x" width="163" height="174">
+                <source loading="lazy" type="image/webp" media="(min-width: 769px)" srcset="/img/products/ce-slim-rice-500g-tablet.webp 1x, /img/products/ce-slim-rice-500g-tablet@2x.webp 2x" width="163" height="174">
+                <source loading="lazy" type="image/webp" srcset="/img/products/ce-slim-rice-500g-mobile.webp 1x, /img/products/ce-slim-rice-500g-mobile@2x.webp 2x" width="72" height="84">
 
-                <source media="(min-width: 1440px)" srcset="/img/products/ce-slim-rice-500g-desktop.png 1x, /img/products/ce-slim-rice-500g-desktop@2x.png 2x" width="163" height="174">
-                <source media="(min-width: 769px)" srcset="/img/products/ce-slim-rice-500g-tablet.png 1x, /img/products/ce-slim-rice-500g-tablet@2x.png 2x" width="163" height="174">
-                <img class="products__img" src="/img/products/ce-slim-rice-500g-mobile.png" srcset="/img/products/ce-slim-rice-500g-mobile@2x.png 2x" alt="Cat Energy slim 500г c рисом" width="72" height="84">
+                <source loading="lazy" media="(min-width: 1440px)" srcset="/img/products/ce-slim-rice-500g-desktop.png 1x, /img/products/ce-slim-rice-500g-desktop@2x.png 2x" width="163" height="174">
+                <source loading="lazy" media="(min-width: 769px)" srcset="/img/products/ce-slim-rice-500g-tablet.png 1x, /img/products/ce-slim-rice-500g-tablet@2x.png 2x" width="163" height="174">
+                <img class="products__img" loading="lazy" src="/img/products/ce-slim-rice-500g-mobile.png" srcset="/img/products/ce-slim-rice-500g-mobile@2x.png 2x" alt="Cat Energy slim 500г c рисом" width="72" height="84">
               </picture>
             </div>
 
