--- a/source/index.html
+++ b/source/index.html
@@ -30,7 +30,7 @@
 
       <a class="main-header__logo-link-text" href="#">
         <svg class="main-header__text-logo" width="102" height="19" role="img" aria-label="Логотип Cat Energy">
-          <use href="/img/sprite.svg#logo-text"></use>
+          <use href="/img/sprite.svg#logo_logo-text"></use>
         </svg>
       </a>
 
@@ -140,11 +140,11 @@
 
           <div class="cat__before">
             <picture>
-              <source type="image/webp" media="(min-width: 769px)" srcset="/img/index/cat-fat-tablet.webp 1x, /img/index/cat-fat-tablet@2x.webp 2x" width="560" height="512">
-              <source type="image/webp" srcset="/img/index/cat-fat-mobile.webp 1x, /img/index/cat-fat-mobile@2x.webp 2x" width="560" height="512">
+              <source loading="lazy" type="image/webp" media="(min-width: 769px)" srcset="/img/index/cat-fat-tablet.webp 1x, /img/index/cat-fat-tablet@2x.webp 2x" width="560" height="512">
+              <source loading="lazy" type="image/webp" srcset="/img/index/cat-fat-mobile.webp 1x, /img/index/cat-fat-mobile@2x.webp 2x" width="280" height="256">
 
-              <source media="(min-width: 769px)" srcset="/img/index/cat-fat-tablet.png 1x, /img/index/cat-fat-tablet@2x.png 2x" width="560" height="512">
-              <img class="cat__before-img" src="/img/index/cat-fat-mobile.png" srcset="/img/index/cat-fat-mobile@2x.png 2x" alt="Полный кот Борис до" width="280" height="256">
+              <source loading="lazy" media="(min-width: 769px)" srcset="/img/index/cat-fat-tablet.png 1x, /img/index/cat-fat-tablet@2x.png 2x" width="560" height="512">
+              <img class="cat__before-img" loading="lazy" src="/img/index/cat-fat-mobile.png" srcset="/img/index/cat-fat-mobile@2x.png 2x" alt="Полный кот Борис до" width="280" height="256">
             </picture>
           </div>
 
@@ -156,11 +156,11 @@
 
           <div class="cat__after">
             <picture>
-              <source type="image/webp" media="(min-width: 769px)" srcset="/img/index/cat-skinny-tablet.webp 1x, /img/index/cat-skinny-tablet@2x.webp 2x" width="560" height="512">
-              <source type="image/webp" srcset="/img/index/cat-skinny-mobile.webp 1x, /img/index/cat-skinny-mobile@2x.webp 2x" width="560" height="512">
+              <source loading="lazy" type="image/webp" media="(min-width: 769px)" srcset="/img/index/cat-skinny-tablet.webp 1x, /img/index/cat-skinny-tablet@2x.webp 2x" width="560" height="512">
+              <source loading="lazy" type="image/webp" srcset="/img/index/cat-skinny-mobile.webp 1x, /img/index/cat-skinny-mobile@2x.webp 2x" width="280" height="256">
 
-              <source media="(min-width: 769px)" srcset="/img/index/cat-skinny-tablet.png 1x, /img/index/cat-skinny-tablet@2x.png 2x" width="560" height="512">
-              <img class="cat__after-img" src="/img/index/cat-skinny-mobile.png" srcset="/img/index/cat-skinny-mobile@2x.png 2x" alt="Худой кот Борис после" width="280" height="256">
+              <source loading="lazy" media="(min-width: 769px)" srcset="/img/index/cat-skinny-tablet.png 1x, /img/index/cat-skinny-tablet@2x.png 2x" width="560" height="512">
+              <img class="cat__after-img" loading="lazy" src="/img/index/cat-skinny-mobile.png" srcset="/img/index/cat-skinny-mobile@2x.png 2x" alt="Худой кот Борис после" width="280" height="256">
             </picture>
           </div>
 
@@ -176,7 +176,7 @@
 
           <div class="adress__wrapper">
             <p class="adress__text">ул. Большая Конюшенная, д. 19/8</p>
-            <p class="adress__text adress__city">Санкт-Петербург 555</p>
+            <p class="adress__text adress__city">Санкт-Петербург</p>
           </div>
         </div>
 
